gl33-master/src/test/deca/syntax/invalid/others/ifFausse.deca
/*
Test sur le syntaxe de if

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
  boolean a = true;
  uf(a){
    print("hello");
  }
}
